Multiplication is functioning correctly, as is color animation and correct/incorrect answer handling

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Multiplication Flash Cards</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body id="bodyBackground">
 	<div id="multiplicand"></div>
 
 	<div id="multiplier"></div>
