--- a/index.html
+++ b/index.html
@@ -3,17 +3,43 @@
 <head>
 	<title>Multiplication Flash Cards</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
 <body id="bodyBackground">
-	<div id="multiplicand"></div>
+	<div>
+		<span id="multiplicand" class="multiplication-problem"></span> x <span id="multiplier" class="multiplication-problem"></span>
+	</div>
 
-	<div id="multiplier"></div>
+	<div id="product" class="multiplication-problem">
+		<div id="productInput"></div>
+	</div>
 
-	<div id="product">
-		<input type="number" id="productInput" name="product">
-		<button onclick="checkAnswer()">Check</button>
+	<div class="divTable">
+		<div class="divTableBody">
+			<div class="divTableRow">
+				<div class="divTableCell">1</div>
+				<div class="divTableCell">2</div>
+				<div class="divTableCell">3</div>
+			</div>
+			<div class="divTableRow">
+				<div class="divTableCell">4</div>
+				<div class="divTableCell">5</div>
+				<div class="divTableCell">6</div>
+			</div>
+			<div class="divTableRow">
+				<div class="divTableCell">7</div>
+				<div class="divTableCell">8</div>
+				<div class="divTableCell">9</div>
+			</div>
+			<div class="divTableRow">
+				<div class="divTableCell ignore">&nbsp;</div>
+				<div class="divTableCell">0</div>
+				<div class="divTableCell ignore">C</div>
+			</div>
+		</div>
 	</div>
 
 <script src="script.js"></script>
+
 </body>
 </html>
